# BashQuickHelp

./: .gitignore  CMakeLists.txt  Readme.md
include/: app.hpp  categories.hpp  colors.hpp  commandlist.hpp  commands.hpp  desclist.hpp  quickhelp.hpp
src/: app.cpp  desclist.cpp  helpme.cpp
